Update UI with placeholder image and fixes

--- a/TicketHub.Web/index.html
+++ b/TicketHub.Web/index.html
@@ -19,7 +19,8 @@
         <main>
             <div class="concert-details">
                 <div class="concert-image">
-                    <img src="img/concert.jpg" alt="Concert">
+                    <img src="https://via.placeholder.com/600x400?text=Concert+Image" alt="Concert">
+                  </div>
                 </div>
                 <div class="concert-info">
                     <h2 id="concertName">Sweetener World Tour</h2>
