--- a/TicketHub.Web/index.html
+++ b/TicketHub.Web/index.html
@@ -19,8 +19,8 @@
         <main>
             <div class="concert-details">
                 <div class="concert-image">
-                    <img src="https://via.placeholder.com/600x400?text=Concert+Image" alt="Concert">
-                  </div>
+                    <img src="https://images.unsplash.com/photo-1501281668745-f7f57925c3b4?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80" alt="Concert">
+                </div>
                 </div>
                 <div class="concert-info">
                     <h2 id="concertName">Sweetener World Tour</h2>
